--- a/beginner/lakshya_bansal.html
+++ b/beginner/lakshya_bansal.html
@@ -10,6 +10,7 @@
   <script async custom-element="amp-sidebar" src="https://cdn.ampproject.org/v0/amp-sidebar-0.1.js"></script>
   <script async custom-element="amp-accordion" src="https://cdn.ampproject.org/v0/amp-accordion-0.1.js"></script>
   <script async custom-element="amp-selector" src="https://cdn.ampproject.org/v0/amp-selector-0.1.js"></script>
+  <script async custom-element="amp-bind" src="https://cdn.ampproject.org/v0/amp-bind-0.1.js"></script>
   <link rel="canonical" href="https://preview.amp.dev/documentation/components/amp-carousel.example.1.html">
   <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
   <style amp-boilerplate>body{-webkit-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-moz-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-ms-animation:-amp-start 8s steps(1,end) 0s 1 normal both;animation:-amp-start 8s steps(1,end) 0s 1 normal both}@-webkit-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-moz-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-ms-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-o-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}</style><noscript><style amp-boilerplate>body{-webkit-animation:none;-moz-animation:none;-ms-animation:none;animation:none}</style></noscript>
@@ -109,6 +110,23 @@
         <h3>A short video about me</h3>
         <amp-youtube data-videoid="aR4CEO0N_-I" layout="responsive" width="480" height="270"></amp-youtube>
       </div>
+      <div>
+        <amp-state id="clap">
+          <script type="application/json">
+            0
+          </script>
+        </amp-state>
+        Clap for yourself
+        <br>
+        <button on="tap:AMP.setState({
+          clap:clap+1,
+          text:'times awesome'
+        })">
+        <amp-img src="https://drive.google.com/thumbnail?id=1qaszMEn2o0aW47KBt9hCd_WiFd6ebfUC" width="100" height="100"></amp-img>
+        </button>
+        <div>You are <span [text]="clap">important for us.</span> <span [text]="text"> </span></div>
+      </div>
+
       <div class="connect" id="connect">
         <h3>Grow our network</h3>
         <div>
