--- a/beginner/PremChavhan.html
+++ b/beginner/PremChavhan.html
@@ -1,25 +1,21 @@
 <!doctype html>
-<html amp lang="en">
+<html ⚡>
 <head>
     <meta charset="utf-8">
+    <title>amp-bind - Example 2</title>
     <script async src="https://cdn.ampproject.org/v0.js"></script>
-    <script async custom-element="amp-carousel" src="https://cdn.ampproject.org/v0/amp-carousel-0.1.js"></script>
-    <script async custom-element="amp-youtube" src="https://cdn.ampproject.org/v0/amp-youtube-0.1.js"></script>
-    <script async custom-element="amp-iframe" src="https://cdn.ampproject.org/v0/amp-iframe-0.1.js"></script>
-    <script async custom-element="amp-social-share" src="https://cdn.ampproject.org/v0/amp-social-share-0.1.js"></script>
-    <script async custom-element="amp-sidebar" src="https://cdn.ampproject.org/v0/amp-sidebar-0.1.js"></script>
-    <script async custom-element="amp-accordion" src="https://cdn.ampproject.org/v0/amp-accordion-0.1.js"></script>
-    <script async custom-element="amp-form" src="https://cdn.ampproject.org/v0/amp-form-0.1.js"></script>
-    <script async custom-template="amp-mustache" src="https://cdn.ampproject.org/v0/amp-mustache-0.2.js"></script>
-    <script async custom-element="amp-lightbox-gallery" src="https://cdn.ampproject.org/v0/amp-lightbox-gallery-0.1.js"></script>
+    <script async custom-element = "amp-list"
+            src = "https://cdn.ampproject.org/v0/amp-list-0.1.js">
+    </script>
 
+    <script async custom-template = "amp-mustache"
+            src = "https://cdn.ampproject.org/v0/amp-mustache-0.2.js">
+    </script>
 
-    <title>Hello, AMPs</title>
-    <link rel="canonical" href="https://amp.dev/documentation/guides-and-tutorials/start/create/basic_markup/">
+    <script custom-element="amp-bind" src="https://cdn.ampproject.org/v0/amp-bind-0.1.js" async></script>
+    <link rel="canonical" href="https://preview.amp.dev/documentation/components/amp-bind.example.2.html">
     <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
-        <style amp-boilerplate>
-            body{
-            -webkit-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-moz-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-ms-animation:-amp-start 8s steps(1,end) 0s 1 normal both;animation:-amp-start 8s steps(1,end) 0s 1 normal both}@-webkit-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-moz-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-ms-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-o-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}</style><noscript><style amp-boilerplate>body{-webkit-animation:none;-moz-animation:none;-ms-animation:none;animation:none}</style></noscript>
+    <style amp-boilerplate>body{-webkit-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-moz-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-ms-animation:-amp-start 8s steps(1,end) 0s 1 normal both;animation:-amp-start 8s steps(1,end) 0s 1 normal both}@-webkit-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-moz-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-ms-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-o-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}</style><noscript><style amp-boilerplate>body{-webkit-animation:none;-moz-animation:none;-ms-animation:none;animation:none}</style></noscript>
     <style amp-custom>
 
         @font-face {
@@ -61,25 +57,16 @@
             100%{background-position:0 50%}
         }
 
-        h1{
+        h3{
             color: white;
         }
 
         button{
-            background-color:transparent;
-            border: transparent;
-        }
-
-        div {
-           color: white;
-            margin: 5px 5px;
-        }
-
-        #buttonsub {
             background-color: #4CAF50; /* Green */
             border: none;
             color: white;
-            padding: 5px 5px;
+            padding: 4px 4px 4px 4px;
+            margin: 5px;
             text-align: center;
             text-decoration: none;
             display: inline-block;
@@ -95,100 +82,117 @@
     </style>
 </head>
 <body>
-<header class="headerbar">
-    <div class="navbar-trigger" role="button" tabindex="0"
-         on="tap:sidebar-left.toggle">☰</div>
-</header>
-<amp-sidebar id="sidebar-left" class="sample-sidebar" layout="nodisplay" side="left">
-    <h3>Sidebar</h3>
-    <nav toolbar="(min-width: 784px)" toolbar-target="target-element-left">
-        <!--<ul>
-            <li>Nav item 1</li>
-            <li>Nav item 2</li>
-        </ul>-->
-        <amp-accordion class="sample">
-            <section expanded>
-                <h4 style="color: black">Section 1</h4>
-                <ul>
-                <li style="color: black">Nav item 1</li>
-                <li style="color: black">Nav item 2</li>
-                </ul>
-            </section>
-            <section>
-                <h4 style="color: black">Section 2</h4>
-                <ul>
-                    <li style="color: black">Nav item 1</li>
-                    <li style="color: black">Nav item 2</li>
-                </ul>
-            </section>
-            </amp-accordion>
-    </nav>
- <!--   <ul>
-        <li>Nav item 3</li>
-        <li>Nav item 4</li>
-    </ul>-->
-</amp-sidebar>
-<center><h1>Hello, I am Prem Chavhan</h1></center>
-<center><h1>My Projects</h1></center>
-<amp-carousel height="300"
-                             layout="fixed-height"
-                             type="carousel">
-    <amp-img lightbox src="./images/cas1.png"
-             width="400"
-             height="300"
-             alt="a sample image"></amp-img>
-    <amp-img lightbox src="./images/cas2.png"
-             width="400"
-             height="300"
-             alt="a sample image"></amp-img>
-    <amp-img lightbox src="./images/cas3.png"
-             width="400"
-             height="300"
-             alt="a sample image"></amp-img>
-    <amp-img lightbox src="./images/cas4.png"
-             width="400"
-             height="300"
-             alt="a sample image"></amp-img>
-</amp-carousel>
-<center><h1>Videos</h1></center>
-    <amp-youtube width="400"
-                 height="300"
-                 layout="responsive"
-                 data-videoid="5XVOD6js5YM">
-    </amp-youtube>
+<amp-state id="project">
+    <script type="application/json">
+        {
+            "project1": {
+                "title": "Mobomart Android Application",
+                "url": "./images/cas1.png"
+            },
+            "project2": {
+                "title": "Frrelancer Portal Android Application",
+                "url": "./images/cas2.png"
+            },
+            "project3": {
+                "title": "Financial analyzer Android Application",
+                "url": "./images/cas3.png"
+            },
+            "project4": {
+                "title": "Stall Management android Application",
+                "url": "./images/cas4.png"
+            }
+        }
+    </script>
+</amp-state>
 
-<amp-youtube width="400"
-             height="300"
-             layout="responsive"
-             data-videoid="xhXyGRPeuVw">
-</amp-youtube>
-<center><h1>News Letter Subscription</h1></center>
+<amp-state id="project1">
+    <script type="application/json">
+        {
+            "items": [
+                {
+                    "title": "Mobomart Android Application",
+                    "url": "./images/cas1.png"
+                },
+                {
+                    "title": "Frrelancer Portal Android Application",
+                    "url": "images/cas2.png"
+                },
+                {
+                    "title": "Financial analyzer Android Application",
+                    "url": "images/cas3.png"
+                },
+                {
+                    "title": "Stall Management android Application",
+                    "url": "images/cas4.png"
+                }
+            ]
+        }
+    </script>
+</amp-state>
+
 <div style="text-align: center;">
-<form class="sample-form" method="post" action-xhr="/documentation/examples/api/submit-form-input-text-xhr" target="_top">
-    <input type="text" name="name" placeholder="Name..." required>
-    <input type="email" name="email" placeholder="Email..." required>
-    <button id="buttonsub" type="submit" value="Subscribe">Subscribe</button>
-
-    <div submit-success>
-        <template type="amp-mustache">
-            Success! Thanks {{name}} for trying the <code>amp-form</code> demo! Try to insert the word "error" as a name input in the form to see how <code>amp-form</code> handles errors.
-        </template>i
-    </div>
-    <div submit-error>
-        <template type="amp-mustache">
-            Success! Thanks {{name}} for trying the <code>amp-form</code> demo! Try to insert the word "error" as a name input in the form to see how <code>amp-form</code> handles errors.
-
-        </template>
-    </div>
-</form>
+    <h3>Hello, I am Prem Chavhan</h3>
+    <h3>My Projects using List Placeholder and Mustache</h3>
+    <button on = "tap:amp-list-placeholder.refresh">Refresh Images</button>
 </div>
-<center><h1>Share</h1></center>
-<center>
-<amp-social-share type="pinterest"></amp-social-share>
-<amp-social-share type="facebook"></amp-social-share>
-<amp-social-share type="twitter"></amp-social-share>
-<amp-social-share type="linkedin"></amp-social-share>
-<amp-social-share type="whatsapp"></amp-social-share>
-</center>
+
+
+<div style="text-align: center;">
+    <amp-list id="amp-list-placeholder" noloading layout="fixed-height" height="654" src="amp-state:project1" binding="no">
+        <div placeholder>
+            <div class="product">
+                <div class="image-placeholder"></div>
+                <div>Loading...</div>
+            </div>
+            <div class="product">
+                <div class="image-placeholder"></div>
+                <div>Loading...</div>
+            </div>
+            <div class="product">
+                <div class="image-placeholder"></div>
+                <div>Loading...</div>
+            </div>
+            <div class="product">
+                <div class="image-placeholder"></div>
+                <div>Loading...</div>
+            </div>
+        </div>
+        <template type="amp-mustache">
+            <div class="product">
+                <amp-img width="200" height="300" alt="{{title}}" src="{{url}}"></amp-img>
+                <div>
+                    <div style="color: white">{{title}}</div>
+                    <!--<div>{{{stars}}}</div>
+                    <div>${{price}}</div>-->
+                </div>
+            </div>
+        </template>
+    </amp-list>
+</div>
+
+<div style="text-align: center;">
+    <h3>My Projects using amp-img, Mustache and setState</h3>
+</div>
+
+<div style="text-align: center;">
+<div id="amp-list-state" [class]="project[currentProj].style">
+    <p style="color: white" [text]="currentProj +' Screenshot'+ '.'">.</p>
+    <amp-img
+            width="200"
+            height="300"
+            src="./images/cas1.png"
+            [src]="project[currentProj].url"
+    >
+    </amp-img>
+    <button on="tap:AMP.setState({currentProj: 'project1'})">Project1</button>
+    <button on="tap:AMP.setState({currentProj: 'project2'})">
+        Project2
+    </button>
+    <button on="tap:AMP.setState({currentProj: 'project3'})">Project3</button>
+    <button on="tap:AMP.setState({currentProj: 'project4'})">
+        Project4
+    </button>
+</div>
+</div>
 </body>
 </html>
