--- a/Yashraj_AMPstories.html
+++ b/Yashraj_AMPstories.html
@@ -156,8 +156,8 @@
 
         <amp-story-page id="page-3">
             <amp-story-grid-layer template="fill">
-                <amp-img src="https://wallpaperplay.com/walls/full/1/5/6/228235.jpg" animate-in="fly-in-top" width="1080" height="1440" layout="responsive" object-position="55% 50%">
-                </amp-img>
+                <amp-anim width="245" height="300" src="https://thumbs.gfycat.com/PassionateGlitteringAmurstarfish-size_restricted.gif" alt="an animation" object-position="53% 50%">
+                </amp-anim>
             </amp-story-grid-layer>
             <amp-story-grid-layer template="thirds">
                 <h1 animate-in="fly-in-bottom" grid-area="upper-third" animate-in-delay="0.5s">
